Column ordering, removing default values, adding stripes

--- a/how-political/index.html
+++ b/how-political/index.html
@@ -33,23 +33,23 @@
 			</p>
 		</div>
 
-		<div class="col-md-9">
+		<div class="col-md-9 col-md-push-3">
 
 			<div class="progress">
-			  <div id="democrat" class="progress-bar progress-bar-info progress-bar-striped" style="width: 35%"></div>
-			  <div id="republican" class="progress-bar progress-bar-danger progress-bar-striped" style="width: 20%"></div>
-			  <div id="other" class="progress-bar progress-bar-warning" style="width: 45%"></div>
+			  <div id="democrat" class="progress-bar progress-bar-info progress-bar-striped" style="width: 33%"></div>
+			  <div id="republican" class="progress-bar progress-bar-danger progress-bar-striped" style="width: 34%"></div>
+			  <div id="other" class="progress-bar progress-bar-warning progress-bar-striped" style="width: 33%"></div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-4 d">123</div>
-				<div class="col-md-4 r">456</div>
-				<div class="col-md-4 o">12</div>
+				<div class="col-md-4 d"></div>
+				<div class="col-md-4 r"></div>
+				<div class="col-md-4 o"></div>
 			</div>
 
 		</div>
 
-		<div class="col-md-3">
+		<div class="col-md-3 col-md-pull-9">
 			<p id="output">0</p>			
 			<ul id="labels"></ul>
 		</div>
