New search shortcuts

--- a/how-political/index.html
+++ b/how-political/index.html
@@ -26,6 +26,8 @@
 			<input class="form-control" type="text" placeholder="attorney, lawyer" id="filter" />
 			<p class="help-block examples">
 				Examples: 
+					<a href="#">:all</a> (<em>all combined</em>), 
+					<a href="#">:top</a> (<em>top givers</em>),
 					<a href="#">admin</a>, 
 					<a href="#">computer, software, web</a>, 
 					<a href="#">^Software</a> (<em>^ indicates start of title</em>), 
@@ -50,8 +52,8 @@
 		</div>
 
 		<div class="col-md-3 col-md-pull-9">
-			<p id="output">0</p>			
-			<ul id="labels"></ul>
+			<p id="output"></p>			
+			<ul id="labels" class="list-unstyled"></ul>
 		</div>
 
 	</body>
