Adding special top: and bottom: search sugar

--- a/how-political/index.html
+++ b/how-political/index.html
@@ -27,7 +27,8 @@
 			<p class="help-block examples">
 				Examples: 
 					<a href="#">:all</a> (<em>all combined</em>), 
-					<a href="#">:top</a> (<em>top givers</em>),
+					<a href="#">top:5</a> (<em>top 5 givers</em>), 
+					<a href="#">bottom:5</a> (<em>bottom 5 givers</em>),
 					<a href="#">admin</a>, 
 					<a href="#">computer, software, web</a>, 
 					<a href="#">^Software</a> (<em>^ indicates start of title</em>), 
