auto-search based on url hash

--- a/how-political/index.html
+++ b/how-political/index.html
@@ -46,13 +46,13 @@
 
 			Examples: 
 			<ul class="help-block list-unstyled examples">
-				<li><a href="#">:all</a> (<em>all combined</em>)</li> 
-				<li><a href="#">top:5</a> (<em>top 5 givers</em>)</li> 
-				<li><a href="#">bottom:5</a> (<em>bottom 5 givers</em>)</li>
-				<li><a href="#">admin</a> (<em>partial title match</em>)</li> 
-				<li><a href="#">computer, software, web</a></li> 
-				<li><a href="#">^Software</a> (<em>^ start of title</em>)</li> 
-				<li><a href="#">^Agent$</a> (<em>$ end of title</em>)</li>
+				<li><a href="#:all">:all</a> (<em>all combined</em>)</li> 
+				<li><a href="#top:5">top:5</a> (<em>top 5 givers</em>)</li> 
+				<li><a href="#bottom:5">bottom:5</a> (<em>bottom 5 givers</em>)</li>
+				<li><a href="#admin">admin</a> (<em>partial title match</em>)</li> 
+				<li><a href="#computer, software, web">computer, software, web</a></li> 
+				<li><a href="#^Software">^Software</a> (<em>^ start of title</em>)</li> 
+				<li><a href="#^Agent$">^Agent$</a> (<em>$ end of title</em>)</li>
 			</ul>
 
 			<p id="output"></p>			
